...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Edit"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"/>
    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Logout"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"/>
    </LinearLayout>
...
